...
import com.samuelribeiro.recorda.ui.theme.SpaceMedium
import com.samuelribeiro.recorda.ui.theme.SpaceSmall
import com.samuelribeiro.recorda.presentation.ui.topic.TopicUiState

const val ADD_TOPIC_BUTTON_TEST_TAG = "AddTopicButtonTestTag"
const val INPUT_ERROR_TEST_TAG = "InputErrorTestTag"
const val TOPIC_ITEM_TEST_TAG = "TopicItemTestTag"
const val TOPIC_INPUT_TEST_TAG = "TopicInput"
const val DELETE_BUTTON_TEST_TAG = "DeleteButtonTestTag"

@Composable
fun TopicListContent(
    uiState: TopicUiState,
    onAddTopicClick: (String) -> Unit,
    onTopicClick: (String) -> Unit,
...
